// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch > Snapshots > matches checked state snapshot 1`] = `
<button
  aria-checked="true"
  class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
  data-state="checked"
  data-testid="switch"
  role="switch"
  type="button"
  value="on"
>
  <span
    class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
    data-state="checked"
  />
</button>
`;

exports[`Switch > Snapshots > matches default snapshot 1`] = `
<button
  aria-checked="false"
  class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
  data-state="unchecked"
  data-testid="switch"
  role="switch"
  type="button"
  value="on"
>
  <span
    class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
    data-state="unchecked"
  />
</button>
`;

exports[`Switch > Snapshots > matches disabled state snapshot 1`] = `
<button
  aria-checked="false"
  class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
  data-disabled=""
  data-state="unchecked"
  data-testid="switch"
  disabled=""
  role="switch"
  type="button"
  value="on"
>
  <span
    class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
    data-disabled=""
    data-state="unchecked"
  />
</button>
`;
